# memory-system

./: .gitignore  long_conversation_test.py  pyproject.toml
sql/: 001_initial_schema.sql  002_workspace_schema.sql  003_topic_tracking_schema.sql
src/memory_system/: __init__.py  config.py  models.py
src/memory_system/parsers/: __init__.py  base_parser.py  html_parser.py  json_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
src/memory_system/services/: __init__.py  citation_engine.py  context_packer.py  digest_service.py  embedding_service.py  memory_gateway.py  minio_notification.py  minio_service.py  neo4j_service.py  postgres_service.py  prompt_composer.py  redis_service.py  retrieval_engine.py  source_registry.py  summary_builder.py  topic_tracking_service.py  workspace_service.py
src/memory_system/workers/: __init__.py  ingestion_worker.py
tests/: naga_llm_service.py  test_integration_exhaustive.py  test_memory_system.py  test_real_documents.py  test_real_integration.py  test_workspace.py  test_workspace_e2e.py
