[project]
name = "agentic-memory-system"
version = "0.1.0"
description = "5-memory hierarchical memory system for conversational agents"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "neo4j>=5.18.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "faker>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_system"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
